fix: set content-carousel hero images to stretch with object-fit

--- a/@uportal/content-carousel/src/components/ContentCarousel.scss
+++ b/@uportal/content-carousel/src/components/ContentCarousel.scss
@@ -10,8 +10,8 @@
     width: 100%;
 
     img {
-      max-width: 100%;
-      height: inherit;
+      width: 100%;
+      object-fit: cover;
       vertical-align: middle;
     }
   }
